--- a/package.json
+++ b/package.json
@@ -21,21 +21,24 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@types/ws": "^8.18.0",
     "@uiw/react-md-editor": "^4.0.5",
-    "@uploadthing/react": "^7.1.4",
+    "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.4.2",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.469.0",
     "next": "^15.1.7",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.4.2",
+    "uploadthing": "^7.5.2",
+    "ws": "^8.18.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
